--- a/Vinylsg12/app/src/main/res/values/dimens.xml
+++ b/Vinylsg12/app/src/main/res/values/dimens.xml
@@ -2,4 +2,12 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="text_size">20sp</dimen>
+    <dimen name="width_logo">113dp</dimen>
+    <dimen name="height_logo">125dp</dimen>
+
+    <dimen name="margin_default">0dp</dimen>
+    <dimen name="padding_default">12dp</dimen>
+    <dimen name="text_size_default">16dp</dimen>
 </resources>
