--- a/Vinylsg12/app/src/main/res/layout/item_album.xml
+++ b/Vinylsg12/app/src/main/res/layout/item_album.xml
@@ -6,6 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_margin="0dp"
+        android:theme="@style/Theme.VinylsG12"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardElevation="2dp">
 
