--- a/Vinylsg12/app/src/main/res/values/dimens.xml
+++ b/Vinylsg12/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="header_vinyls_margin">8dp</dimen>
+    <dimen name="header_vinyls_size">30dp</dimen>
 </resources>
