--- a/Vinylsg12/app/src/main/res/values/styles.xml
+++ b/Vinylsg12/app/src/main/res/values/styles.xml
@@ -2,5 +2,6 @@
 <resources>
     <style name="custom_font_style" parent="@style/TextAppearance.AppCompat.Body1">
         <item name="android:fontFamily">@font/averia_libre_regular</item>
+        <item name="windowActionBar">false</item>
     </style>
 </resources>
