--- a/Vinylsg12/app/src/main/res/values/colors.xml
+++ b/Vinylsg12/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary_color">#FF5722</color>
+    <color name="dark_primary_color">#E64A19</color>
+    <color name="light_primary_color">#FFCCBC</color>
+    <color name="text_icon_color">#FFFFFFFF</color>
+    <color name="accent_color">#FF9800</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#757575</color>
+    <color name="divider_color">#BDBDBD</color>
 </resources>
