--- a/Vinylsg12/app/src/main/res/layout/main_nav_header.xml
+++ b/Vinylsg12/app/src/main/res/layout/main_nav_header.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:theme="@style/Theme.VinylsG12"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="176dp"
-    android:background="@color/purple_700">
+    android:background="?attr/colorPrimary">
 
     <LinearLayout
         android:layout_width="wrap_content"
