feat: Add album action button and fix navigation issue

--- a/Vinylsg12/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Vinylsg12/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="co.edu.uniandes.vinylsg12.ui.albums.HomeFragment"
+        android:name="co.edu.uniandes.vinylsg12.ui.albums.AlbumsFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_albums" />
 
