--- a/Vinylsg12/app/src/main/res/layout/activity_main.xml
+++ b/Vinylsg12/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:layout_marginBottom="280dp"
-        android:background="#E6D8620D"
+        android:background="@color/background_component_90"
         android:fontFamily="@font/averia_libre_regular"
         android:gravity="start"
         android:paddingStart="40dp"
@@ -40,7 +40,7 @@
         android:id="@+id/tv_collections"
         android:layout_width="match_parent"
         android:layout_height="51dp"
-        android:background="#D8D8620D"
+        android:background="@color/background_component_60"
         android:fontFamily="@font/averia_libre_regular"
         android:gravity="start"
         android:paddingStart="40dp"
