feat: Refactor creation form

--- a/Vinylsg12/app/src/main/res/layout/activity_album_form.xml
+++ b/Vinylsg12/app/src/main/res/layout/activity_album_form.xml
@@ -4,173 +4,150 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/im_background_vinyl"
+    android:background="@drawable/background_photo"
     tools:context=".ui.album.AlbumFormActivity">
 
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/post_result_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:paddingHorizontal="10dp"
-            android:text="@string/txt_create_album"
-            android:textColor="@color/secondary_text"
-            android:textSize="25sp" />
-
-        <EditText
-            android:id="@+id/name"
-            style="@style/Theme.EditTextStyle"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="text"
+            android:orientation="vertical" >
 
-            android:layout_marginTop="220dp"
-            android:background="@color/secondary_color"
-            android:drawableStart="@drawable/ic_username"
-            android:hint="@string/hint_name"
-            android:maxLength="40"
-            android:maxLines="1"
-            android:minHeight="48dp"
-            android:paddingHorizontal="10dp"
-            android:singleLine="true"
-            android:textColor="@color/secondary_text"
-            android:textColorHint="@color/secondary_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            <EditText
+                android:id="@+id/name"
+                style="@style/Theme.EditTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/secondary_color"
 
-        <EditText
-            android:id="@+id/cover"
-            style="@style/Theme.EditTextStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="text"
+                android:drawableStart="@drawable/ic_text_field"
+                android:ems="10"
+                android:hint="@string/hint_name"
+                android:inputType="text"
+                android:maxLength="40"
+                android:maxLines="1"
+                android:minHeight="48dp"
+                android:paddingHorizontal="10dp"
+                android:singleLine="true"
+                android:textColor="@color/secondary_text"
+                android:textColorHint="@color/secondary_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            android:layout_marginTop="10dp"
-            android:background="@color/secondary_color"
-            android:drawableStart="@drawable/ic_username"
-            android:hint="@string/hint_cover_url"
-            android:maxLength="40"
-            android:maxLines="1"
-            android:minHeight="48dp"
-            android:paddingHorizontal="10dp"
-            android:singleLine="true"
-            android:textColor="@color/secondary_text"
-            android:textColorHint="@color/secondary_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/name"/>
+            <EditText
+                android:id="@+id/description"
+                style="@style/Theme.EditTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@color/secondary_color"
 
-        <EditText
-            android:id="@+id/releaseDate"
-            style="@style/Theme.EditTextStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="text"
+                android:drawableStart="@drawable/ic_description"
+                android:ems="10"
+                android:hint="@string/hint_description"
+                android:inputType="text"
+                android:maxLength="40"
+                android:maxLines="1"
+                android:minHeight="48dp"
+                android:paddingHorizontal="10dp"
+                android:singleLine="true"
+                android:textColor="@color/secondary_text"
+                android:textColorHint="@color/secondary_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/releaseDate" />
 
-            android:layout_marginTop="10dp"
-            android:background="@color/secondary_color"
-            android:drawableStart="@drawable/ic_username"
-            android:hint="@string/hint_release_date"
-            android:maxLength="40"
-            android:maxLines="1"
-            android:minHeight="48dp"
-            android:paddingHorizontal="10dp"
-            android:singleLine="true"
-            android:textColor="@color/secondary_text"
-            android:textColorHint="@color/secondary_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            <EditText
+                android:id="@+id/cover"
+                style="@style/Theme.EditTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@color/secondary_color"
 
-            app:layout_constraintTop_toBottomOf="@id/cover"/>
+                android:drawableStart="@drawable/ic_link"
+                android:ems="10"
+                android:hint="@string/hint_cover_url"
+                android:inputType="text"
+                android:maxLines="1"
+                android:minHeight="48dp"
+                android:paddingHorizontal="10dp"
+                android:singleLine="true"
+                android:textColor="@color/secondary_text"
+                android:textColorHint="@color/secondary_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/name" />
 
-        <EditText
-            android:id="@+id/description"
-            style="@style/Theme.EditTextStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="text"
+            <EditText
+                android:id="@+id/releaseDate"
+                style="@style/Theme.EditTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@color/secondary_color"
 
-            android:layout_marginTop="10dp"
-            android:background="@color/secondary_color"
-            android:drawableStart="@drawable/ic_username"
-            android:hint="@string/hint_description"
-            android:maxLength="40"
-            android:maxLines="1"
-            android:minHeight="48dp"
-            android:paddingHorizontal="10dp"
-            android:singleLine="true"
-            android:textColor="@color/secondary_text"
-            android:textColorHint="@color/secondary_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/releaseDate" />
+                android:drawableStart="@android:drawable/ic_menu_my_calendar"
+                android:ems="10"
+                android:hint="@string/hint_release_date"
+                android:inputType="text"
+                android:maxLength="40"
+                android:maxLines="1"
+                android:minHeight="48dp"
+                android:paddingHorizontal="10dp"
+                android:singleLine="true"
+                android:textColor="@color/secondary_text"
+                android:textColorHint="@color/secondary_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
 
-        <EditText
-            android:id="@+id/genre"
-            style="@style/Theme.EditTextStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="text"
+                app:layout_constraintTop_toBottomOf="@id/cover" />
 
-            android:layout_marginTop="10dp"
-            android:background="@color/secondary_color"
-            android:drawableStart="@drawable/ic_username"
-            android:hint="@string/hint_genre"
-            android:maxLength="40"
-            android:maxLines="1"
-            android:minHeight="48dp"
-            android:paddingHorizontal="10dp"
-            android:singleLine="true"
-            android:textColor="@color/secondary_text"
-            android:textColorHint="@color/secondary_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/description"/>
+            <Spinner
+                android:id="@+id/genre_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:background="@color/white"
+                android:drawableStart="@drawable/ic_genre"
+                android:drawablePadding="8dp"
+                android:gravity="center_vertical"/>
 
-        <EditText
-            android:id="@+id/recordLabel"
-            style="@style/Theme.EditTextStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="text"
+            <EditText
+                android:id="@+id/recordLabel"
+                style="@style/Theme.EditTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@color/secondary_color"
 
-            android:layout_marginTop="10dp"
-            android:background="@color/secondary_color"
-            android:drawableStart="@drawable/ic_username"
-            android:hint="@string/hint_record_label"
-            android:maxLength="40"
-            android:maxLines="1"
-            android:minHeight="48dp"
-            android:paddingHorizontal="10dp"
-            android:singleLine="true"
-            android:textColor="@color/secondary_text"
-            android:textColorHint="@color/secondary_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/et_genre" />
+                android:drawableStart="@drawable/ic_record"
+                android:ems="10"
+                android:hint="@string/hint_record_label"
+                android:inputType="text"
+                android:maxLength="40"
+                android:maxLines="1"
+                android:minHeight="48dp"
+                android:paddingHorizontal="10dp"
+                android:singleLine="true"
+                android:textColor="@color/secondary_text"
+                android:textColorHint="@color/secondary_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
-
-    </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/saveActionButton"
