--- a/Vinylsg12/app/src/main/res/values/styles.xml
+++ b/Vinylsg12/app/src/main/res/values/styles.xml
@@ -8,4 +8,19 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+
+    <style name="Theme.EditTextStyle" parent="Theme.VinylsG12">
+        <item name="android:textSize">@dimen/text_size_default</item>
+        <item name="android:drawablePadding">@dimen/padding_default</item>
+        <item name="android:fontFamily">@font/averia_libre_regular</item>
+        <item name="android:textColor">@color/secondary_text</item>
+
+    </style>
+
+    <style name="Theme.ButtonStyle" parent="Theme.VinylsG12">
+        <item name="android:textSize">@dimen/text_size_default</item>
+        <item name="android:layout_margin">@dimen/margin_default</item>
+        <item name="android:backgroundTint">@color/primary_color</item>
+        <item name="android:textColor">@color/primary_text</item>
+    </style>
 </resources>
