--- a/Vinylsg12/app/src/main/res/values-night/themes.xml
+++ b/Vinylsg12/app/src/main/res/values-night/themes.xml
@@ -2,18 +2,15 @@
     <!-- Base application theme. -->
     <style name="Theme.VinylsG12" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/primary_color</item>
-        <item name="colorPrimaryVariant">@color/dark_primary_color</item>
-        <item name="colorOnPrimary">@color/text_icon_color</item>
+        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/accent_color</item>
-        <item name="colorSecondaryVariant">@color/accent_color</item>
-        <item name="colorOnSecondary">@color/text_icon_color</item>
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="android:textColorPrimary">@color/primary_text</item>
-        <item name="android:textColorSecondary">@color/secondary_text</item>
-        <item name="android:divider">@color/divider_color</item>
     </style>
 </resources>
