--- a/Vinylsg12/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Vinylsg12/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,12 +13,12 @@
 
     <item
         android:id="@+id/navigation_musicians"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_musician"
         android:title="@string/title_musicians" />
 
     <item
         android:id="@+id/navigation_bands"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_band"
         android:title="@string/title_bands" />
 
 </menu>
