feat: Add user session handling

--- a/Vinylsg12/app/src/main/res/layout/activity_login.xml
+++ b/Vinylsg12/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".ui.login.LoginActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -37,7 +37,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/collectorId"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:ems="10"
